name:                hadrian
version:             0.1.0.0
synopsis:            GHC build system
license:             BSD3
license-file:        LICENSE
author:              Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
maintainer:          Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
copyright:           Andrey Mokhov 2014-2016
category:            Development
build-type:          Simple
cabal-version:       >=1.10

source-repository head
    type:     git
    location: https://github.com/snowleopard/hadrian

executable hadrian
    main-is:             Main.hs
    hs-source-dirs:      .
                       , src
    other-modules:       Base
                       , Builder
                       , CmdLineFlag
                       , Context
                       , Environment
                       , Expression
                       , Flavour
                       , GHC
                       , Hadrian.Expression
                       , Hadrian.Oracles.ArgsHash
                       , Hadrian.Oracles.DirectoryContents
                       , Hadrian.Oracles.Path
                       , Hadrian.Target
                       , Hadrian.Utilities
                       , Oracles.Config
                       , Oracles.Config.Flag
                       , Oracles.Config.Setting
                       , Oracles.Dependencies
                       , Oracles.ModuleFiles
                       , Oracles.PackageData
                       , Package
                       , Predicate
                       , Rules
                       , Rules.Cabal
                       , Rules.Clean
                       , Rules.Compile
                       , Rules.Configure
                       , Rules.Data
                       , Rules.Dependencies
                       , Rules.Documentation
                       , Rules.Generate
                       , Rules.Gmp
                       , Rules.Install
                       , Rules.Libffi
                       , Rules.Library
                       , Rules.Oracles
                       , Rules.Perl
                       , Rules.Program
                       , Rules.Register
                       , Rules.Selftest
                       , Rules.SourceDist
                       , Rules.Test
                       , Rules.Wrappers
                       , Settings
                       , Settings.Builders.Alex
                       , Settings.Builders.Ar
                       , Settings.Builders.Common
                       , Settings.Builders.Cc
                       , Settings.Builders.Configure
                       , Settings.Builders.DeriveConstants
                       , Settings.Builders.GenPrimopCode
                       , Settings.Builders.Ghc
                       , Settings.Builders.GhcCabal
                       , Settings.Builders.GhcPkg
                       , Settings.Builders.Haddock
                       , Settings.Builders.Happy
                       , Settings.Builders.Hsc2Hs
                       , Settings.Builders.HsCpp
                       , Settings.Builders.Ld
                       , Settings.Builders.Make
                       , Settings.Builders.Tar
                       , Settings.Default
                       , Settings.Flavours.Development
                       , Settings.Flavours.Performance
                       , Settings.Flavours.Profiled
                       , Settings.Flavours.Quick
                       , Settings.Flavours.Quickest
                       , Settings.Packages.Base
                       , Settings.Packages.Cabal
                       , Settings.Packages.Compiler
                       , Settings.Packages.Ghc
                       , Settings.Packages.GhcCabal
                       , Settings.Packages.Ghci
                       , Settings.Packages.GhcPrim
                       , Settings.Packages.Haddock
                       , Settings.Packages.IntegerGmp
                       , Settings.Packages.Rts
                       , Settings.Packages.RunGhc
                       , Settings.Path
                       , Settings.Install
                       , Stage
                       , Target
                       , UserSettings
                       , Util
                       , Way

    default-language:    Haskell2010
    default-extensions:  RecordWildCards
    other-extensions:    DeriveFunctor
                       , DeriveGeneric
                       , FlexibleInstances
                       , GeneralizedNewtypeDeriving
                       , LambdaCase
                       , OverloadedStrings
                       , ScopedTypeVariables
    build-depends:       base >= 4.8 && < 5
                       , ansi-terminal        == 0.6.*
                       , Cabal                == 2.0.0.2
                       , containers           == 0.5.*
                       , directory            >= 1.2 && < 1.4
                       , extra                >= 1.4.7
                       , mtl                  == 2.2.*
                       , QuickCheck           >= 2.6 && < 2.10
                       , shake                >= 0.15.6
                       , transformers         >= 0.4 && < 0.6
                       , unordered-containers == 0.2.*
    build-tools:         alex  >= 3.1
                       , happy >= 1.19.4
    ghc-options:       -Wall
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -fno-warn-name-shadowing
                       -rtsopts
                       -- Disable idle GC to avoid redundant GCs while waiting
                       -- for external processes
                       -with-rtsopts=-I0
                       -- Don't use parallel GC as the synchronization time tends to eat any
                       -- benefit.
                       -with-rtsopts=-qg0
                       -threaded
