name:                shaking-up-ghc
version:             0.1.0.0
synopsis:            GHC build system
license:             BSD3
license-file:        LICENSE
author:              Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
maintainer:          Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
copyright:           Andrey Mokhov 2014-2015
category:            Development
build-type:          Simple
cabal-version:       >=1.10

source-repository head
    type:     git
    location: https://github.com/snowleopard/shaking-up-ghc

executable ghc-shake
    main-is:             Main.hs
    hs-source-dirs:      src
    other-modules:       Base
                       , Builder
                       , CmdLineFlag
                       , Environment
                       , Expression
                       , GHC
                       , Oracles
                       , Oracles.ArgsHash
                       , Oracles.Config
                       , Oracles.Config.Flag
                       , Oracles.Config.Setting
                       , Oracles.Dependencies
                       , Oracles.LookupInPath
                       , Oracles.ModuleFiles
                       , Oracles.PackageData
                       , Oracles.PackageDb
                       , Oracles.PackageDeps
                       , Oracles.WindowsRoot
                       , Package
                       , Predicates
                       , Rules
                       , Rules.Actions
                       , Rules.Cabal
                       , Rules.Clean
                       , Rules.Compile
                       , Rules.Config
                       , Rules.Data
                       , Rules.Dependencies
                       , Rules.Documentation
                       , Rules.Generate
                       , Rules.Generators.Common
                       , Rules.Generators.ConfigHs
                       , Rules.Generators.GhcAutoconfH
                       , Rules.Generators.GhcBootPlatformH
                       , Rules.Generators.GhcPlatformH
                       , Rules.Generators.GhcSplit
                       , Rules.Generators.GhcVersionH
                       , Rules.Generators.VersionHs
                       , Rules.Gmp
                       , Rules.Libffi
                       , Rules.Library
                       , Rules.Oracles
                       , Rules.Package
                       , Rules.Perl
                       , Rules.Program
                       , Rules.Resources
                       , Rules.Wrappers.Ghc
                       , Rules.Wrappers.GhcPkg
                       , Selftest
                       , Settings
                       , Settings.Args
                       , Settings.Builders.Alex
                       , Settings.Builders.Ar
                       , Settings.Builders.Common
                       , Settings.Builders.DeriveConstants
                       , Settings.Builders.Gcc
                       , Settings.Builders.GenApply
                       , Settings.Builders.GenPrimopCode
                       , Settings.Builders.Ghc
                       , Settings.Builders.GhcCabal
                       , Settings.Builders.GhcPkg
                       , Settings.Builders.Haddock
                       , Settings.Builders.Happy
                       , Settings.Builders.Hsc2Hs
                       , Settings.Builders.HsCpp
                       , Settings.Builders.Ld
                       , Settings.Builders.Tar
                       , Settings.Default
                       , Settings.Packages
                       , Settings.Packages.Base
                       , Settings.Packages.Compiler
                       , Settings.Packages.Directory
                       , Settings.Packages.Ghc
                       , Settings.Packages.GhcCabal
                       , Settings.Packages.GhcPrim
                       , Settings.Packages.Haddock
                       , Settings.Packages.Hp2ps
                       , Settings.Packages.IntegerGmp
                       , Settings.Packages.IservBin
                       , Settings.Packages.Rts
                       , Settings.Packages.RunGhc
                       , Settings.Packages.Touchy
                       , Settings.Packages.Unlit
                       , Settings.Paths
                       , Settings.User
                       , Settings.Ways
                       , Stage
                       , Target
                       , Test
                       , Way

    default-language:    Haskell2010
    other-extensions:    DeriveDataTypeable
                       , DeriveGeneric
                       , FlexibleInstances
                       , GeneralizedNewtypeDeriving
                       , LambdaCase
                       , OverloadedStrings
                       , RecordWildCards
                       , ScopedTypeVariables
    build-depends:       base >= 4.8 && < 5
                       , ansi-terminal        == 0.6.*
                       , Cabal                == 1.22.*
                       , containers           == 0.5.*
                       , directory            == 1.2.*
                       , extra                == 1.4.*
                       , mtl                  == 2.2.*
                       , QuickCheck           >= 2.6 && < 2.9
                       , shake                == 0.15.*
                       , transformers         >= 0.4 && < 0.6
                       , unordered-containers == 0.2.*
    ghc-options:         -Wall -fno-warn-name-shadowing -rtsopts -with-rtsopts=-I0
