cabal-version: 3.0
name:          gen-ci
version:       0.1.0.0
build-type:    Simple

common warnings
  ghc-options: -Wall

executable gen_ci
  import:           warnings
  main-is:          gen_ci.hs
  build-depends:
    , aeson       >=1.8.1
    , base
    , bytestring
    , containers

  default-language: Haskell2010
